Added EFT / simp comparisons
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@301 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -89,7 +89,7 @@
 \newcommand{\blankpage}{\newpage\hbox{}\thispagestyle{empty}\newpage}
 \makeatletter
 \title{Dark Matter Benchmark Models for Early LHC Run-2 Searches:
-  Report~of~the~Spring~2015 ATLAS/CMS~Dark~Matter~Forum}
+  Report~of~the~ATLAS/CMS~Dark~Matter~Forum}
 \author{ATLAS+CMS Dark Matter Forum}
 \date{\today}
 \usepackage{titling}
@@ -103,6 +103,14 @@
 
 % consistent symbols throughout document
 \input symbols.tex
+
+%embiggening figures: still a work in progress. 
+%\geometry{
+%	left=24.8mm, % left margin
+%	textwidth=120mm, % main text block
+%	marginparsep=5.2mm, % gutter between main text block and margin notes
+%	marginparwidth=39.4mm % width of margin notes
+%}
 
 \begin{document}
 
@@ -121,7 +129,7 @@
 
 \input{tex/Introduction.tex}
 
-\chapter{\texorpdfstring{Recommended models for all \MET+X analyses}{Recommended models for all MET+X analyses}}
+\chapter{\texorpdfstring{Simplified models for all \MET+X analyses}{Simplified models for all MET+X analyses}}
 \label{subsec:MonojetLikeModels}
 \input{tex/MonojetLikeModels}
 
@@ -138,7 +146,7 @@
 \label{sec:EFTValidity} 
 \input{tex/EFTValidity.tex}
 
-\chapter{Recommendations for evaluation of signal theoretical uncertainties}
+\chapter{Evaluation of signal theoretical uncertainties}
 \label{sec:TheoryUncertainties} 
 \input{tex/TheoryUncertainties.tex}
 
