--- a/doc/tex/TheoryUncertainties.tex
+++ b/doc/tex/TheoryUncertainties.tex
@@ -245,7 +245,7 @@ Finally, we give an example of the \syscalc output which follows the LHEF v3 for
   <wgt id="65">41277</wgt>
 </rwgt>
 \end{verbatim}}
-
+\normalsize
 
 
 %\begin{comment}
